--- a/nyangseng/src/styles/globals.css
+++ b/nyangseng/src/styles/globals.css
@@ -1,4 +1,10 @@
-/* src/styles/globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.container {
+  max-width: 1200px; /* 최대 컨테이너 넓이 */
+  width: 90%; /* 컨테이너가 화면 너비의 90%를 차지하도록 설정 */
+  margin-left: auto; /* 왼쪽 여백을 auto로 설정하여 가운데 정렬 */
+  margin-right: auto; /* 오른쪽 여백을 auto로 설정하여 가운데 정렬 */
+}
